cpp_sources = files(
    'banner.cpp',
    'bigint.cpp',
    'compile_date.c',
    'crc.cpp',
    'default_icon.c',
    'elf.cpp',
    'encryption.cpp',
    'header.cpp',
    'hook.cpp',
    'loadme.c',
    'logo.cpp',
    'ndscodes.cpp',
    'ndscreate.cpp',
    'ndsextract.cpp',
    'ndstool.cpp',
    'ndstree.cpp',
    'raster.cpp',
    'sha1.cpp',
)
